Itadori - Refactor: move global styles from '*' to a SCSS mixin to prevent style bleeding

--- a/src/components/Button/ButtonGal.module.scss
+++ b/src/components/Button/ButtonGal.module.scss
@@ -1,4 +1,4 @@
-@use "../../components/styles/generalInputs.module.scss" as *;
+@use "../../components/styles/generals.module.scss" as *;
 @use "sass:list";
 
 $themes: (
@@ -17,7 +17,9 @@ $themes: (
     $hoverColor: list.nth($colorList, 2);
     $txtAndIconColor: list.nth($colorList, 3);
 
+    
     .btn#{$themeBtn} {
+        font-size: 10px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -30,19 +32,21 @@ $themes: (
         border: none;
         outline: none;
 
+        @include general-styles;
+        
         &:hover {
             background: $hoverColor;
         }
 
         p {
-            font-size: 1.4rem;
+            font-size: 1.4em;
             font-family: OpenSansSemiBold;
             color: $txtAndIconColor;
             transition: color 0.3s ease;
         }
 
         .iconButton {
-            font-size: 2rem;
+            font-size: 2em;
 
             * {
                 transition: color 0.3s ease;
