--- a/src/components/inputs/Dropdown/DropDownGal.module.scss
+++ b/src/components/inputs/Dropdown/DropDownGal.module.scss
@@ -1,6 +1,7 @@
 @use "../../../components/styles/generalInputs.module.scss" as *;
 
 .container {
+    font-size: 10px;
     @include input-general-styles;
 
     .containerLabel {
@@ -10,11 +11,11 @@
         justify-content: flex-start;
         width: 100%;
         height: fit-content;
-        gap: 0.5rem;
+        gap: 0.5em;
 
         label {
             font-family: OpenSansSemiBold;
-            font-size: 1.4rem;
+            font-size: 1.4em;
         }
     }
 
@@ -75,7 +76,7 @@
                     flex-direction: row !important;
                     align-items: center !important;
                     justify-content: flex-start;
-                    gap: 1rem;
+                    gap: 1em;
                     width: 100% !important;
                     height: auto !important;
                     padding: 10px;
