--- a/src/components/inputs/InputFile/InputFileGal.module.scss
+++ b/src/components/inputs/InputFile/InputFileGal.module.scss
@@ -21,7 +21,7 @@
                 border 0.3s ease;
             position: relative;
             background-color: #6936ee;
-            gap: 1rem;
+            gap: 1em;
             border-width: 2px;
             border-style: solid;
             border-color: transparent;
@@ -31,7 +31,7 @@
             .textInput {
                 color: #fff;
                 font-family: OpenSansSemiBold;
-                font-size: 1.3rem;
+                font-size: 1.3em;
                 text-align: center;
                 transition: all .3s ease;
             }
@@ -63,7 +63,7 @@
 
             .fileName {
                 font-family: OpenSansSemiBold;
-                font-size: 1.3rem;
+                font-size: 1.3em;
                 flex: 1;
                 width: 100%;
                 text-align: center;
@@ -73,7 +73,7 @@
             }
 
             .icon{
-                font-size: 2.5rem;
+                font-size: 2.5em;
                 color: #000;
 
                 *{
