--- a/src/components/inputs/InputRadio/InputRadioGal.module.scss
+++ b/src/components/inputs/InputRadio/InputRadioGal.module.scss
@@ -10,11 +10,11 @@
         justify-content: flex-start;
         width: 100%;
         height: fit-content;
-        gap: 0.5rem;
+        gap: 0.5em;
 
         label {
             font-family: OpenSansSemiBold;
-            font-size: 1.3rem;
+            font-size: 1.3em;
         }
     }
 
@@ -24,7 +24,7 @@
         .containerGroupRadio {
             display: flex;
             flex-wrap: wrap;
-            gap: 1rem;
+            gap: 1em;
             width: 100%;
             padding: 10px;
 
@@ -35,7 +35,7 @@
                 flex-direction: row;
                 align-items: center;
                 justify-content: flex-start;
-                gap: 0.5rem;
+                gap: 0.5em;
                 position: relative;
                 transition: all 0.3s ease;
                 cursor: pointer;
@@ -45,7 +45,7 @@
                 }
 
                 label {
-                    font-size: 1.4rem;
+                    font-size: 1.4em;
                     font-family: OpenSansSemiBold;
                     cursor: pointer;
                 }
@@ -55,8 +55,8 @@
                 }
 
                 .containerCustomIcon {
-                    height: 2rem;
-                    max-height: 6rem !important;
+                    height: 2em;
+                    max-height: 6em !important;
                     overflow: hidden;
                     display: flex;
                     align-items: center;
