--- a/src/components/styles/generalInputs.module.scss
+++ b/src/components/styles/generalInputs.module.scss
@@ -1,18 +1,21 @@
 @use "./generals.module.scss" as *;
 
 @mixin input-general-styles {
+    font-size: 10px;
     outline: none;
     border: none;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    gap: 0.5rem;
+    gap: 0.5em;
     position: relative;
+
+    @include general-styles;
 
     .title{
         font-family: OpenSansSemiBold;
-        font-size: 1.3rem;
+        font-size: 1.3em;
     }
 
     .containerInputError {
@@ -30,12 +33,12 @@
             background-color: #fff;
             overflow: hidden;
             border: 1px solid #000;
-            gap: 0.5rem;
+            gap: 0.5em;
             position: relative;
             width: 100%;
 
             .inputElement {
-                font-size: 1.3rem;
+                font-size: 1.3em;
                 padding: 5px 10px;
                 border: 0;
                 outline: none;
@@ -50,7 +53,7 @@
 
         .errorMessage {
             font-family: OpenSansSemiBold;
-            font-size: 1.1rem;
+            font-size: 1.1em;
             color: #ff0000;
             position: absolute;
             top: 105%;
@@ -65,7 +68,7 @@
     }
 
     .icon {
-        font-size: 2rem;
+        font-size: 2em;
         color: #000;
 
         * {
